welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:63: error: not found: value k
while (k != 8 ) {
       ^PictureMono3:65: error: not found: value k
	k=k+1
        ^